<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/kehadiran_tahunan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_green_gradient"
        android:gravity="center"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kehadiran_tahun_ini"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="6dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="12dp"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progres_bar_tahunan"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cpb_background_progressbar_color="#ABBADA"
            app:cpb_background_progressbar_width="18dp"
            app:cpb_progress="60"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/colorPrimary"
            app:cpb_progressbar_width="24dp"
            app:cpb_round_border="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/progres_bar_tahunan"
            app:layout_constraintEnd_toEndOf="@id/progres_bar_tahunan"
            app:layout_constraintStart_toStartOf="@id/progres_bar_tahunan"
            app:layout_constraintTop_toTopOf="@id/progres_bar_tahunan">

            <TextView
                android:id="@+id/progress_value_tahunan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_progress_value"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/progress_hari_tahunan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proggress_year"
                android:textColor="#66BF84" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/present"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_present"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv_present_value"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/permit_leave"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_permit_leave"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv_present_value"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/alpha"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_alpha"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv_present_value"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/late"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_late"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tv_late_value"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>