<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_back_hp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/permit"
            android:textAlignment="center"
            android:textAppearance="@style/page_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="35dp"
            android:paddingTop="10dp"
            android:paddingRight="35dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_permit"
                    android:textSize="12sp" />

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/ijin"
                        style="@style/Widget.App.RadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/leave" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/sakit"
                        style="@style/Widget.App.RadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sick" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/lain"
                        style="@style/Widget.App.RadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/other" />
                </RadioGroup>

                <EditText
                    android:id="@+id/input_type"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:importantForAutofill="no"
                    android:visibility="invisible"
                    tools:ignore="LabelFor,TextFields" />

                <EditText
                    android:id="@+id/input_date_start"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:importantForAutofill="no"
                    android:visibility="invisible"
                    tools:ignore="LabelFor,TextFields" />

                <EditText
                    android:id="@+id/input_date_end"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:importantForAutofill="no"
                    android:visibility="invisible"
                    tools:ignore="LabelFor,TextFields" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                    android:hint="@string/select_date"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/doc_name"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/upload_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_a_button_outlined_fullwidth_icon_leading"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/desc" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:alpha="0.9"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>